--- a/document-structure/cart/task.html
+++ b/document-structure/cart/task.html
@@ -1,18 +1,20 @@
 <!doctype html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Корзина товаров</title>
     <link rel="stylesheet" href="task.css">
     <link rel="stylesheet" href="../../assets/css/style.css">
 </head>
+
 <body>
     <header class="header">
         <div class="logo__container">
-          <a href="https://netology.ru/" class="logo__link"></a>
+            <a href="https://netology.ru/" class="logo__link"></a>
         </div>
         <h1 class="header__title">
             Домашнее задание к занятию 2.3 «Изменение структуры HTML-документа». Корзина товаров.
@@ -26,6 +28,7 @@
             <!-- <div class="cart__product" data-id="1">
                 <img class="cart__product-image" src="image.png">
                 <div class="cart__product-count">20</div>
+                </div>
             </div> -->
         </div>
     </div>
@@ -35,7 +38,8 @@
             <h3 class="product__title">
                 Икра минтая
             </h3>
-            <img src="https://pokushai.kz/uploads/files/640x480_f8f13b9f33dbb71ced4a24d4a9e09c89.jpg" alt="" class="product__image">
+            <img src="https://pokushai.kz/uploads/files/640x480_f8f13b9f33dbb71ced4a24d4a9e09c89.jpg" alt=""
+                class="product__image">
             <div class="product__controls">
                 <div class="product__quantity">
                     <div class="product__quantity-title">
@@ -89,7 +93,8 @@
             <h3 class="product__title">
                 Щука
             </h3>
-            <img src="https://upload.wikimedia.org/wikipedia/commons/c/c5/Esox_lucius1.jpg" alt="" class="product__image">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/c/c5/Esox_lucius1.jpg" alt=""
+                class="product__image">
             <div class="product__controls">
                 <div class="product__quantity">
                     <div class="product__quantity-title">
@@ -142,4 +147,5 @@
     </div>
     <script src="task.js"></script>
 </body>
+
 </html>
